Stop page from horizontal scrolling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,4 +24,6 @@ html {
 
 body {
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
